# galaga

./: CMakeLists.txt  LICENSE  main.c
assets/__MACOSX/flame/: ._thruster.aseprite
